--- a/src/app/widget/pagination/pagination.component.html
+++ b/src/app/widget/pagination/pagination.component.html
@@ -1,13 +1,12 @@
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center mb-5">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Előző</a>
-    </li>
-
-    <li class="page-item" *ngFor="let page of pagesArray"><a class="page-link"> {{ page }}</a></li>
-    
-    <li class="page-item">
-      <a class="page-link" href="#">Következő</a>
-    </li>
-  </ul>
-</nav>
+<ul class="pagination justify-content-center flex-wrap my-5">
+  <li class="page-item previous disabled mt-2" (click)="goPreviousPage()">
+    <a class="page-link" aria-disabled="true">Előző</a>
+  </li>
+  <li class="page-item page mt-2" *ngFor="let page of pages" (click)="onClickListItem(page)"
+    [ngClass]="page === 1 ? 'active' : ''">
+    <a class="page-link">{{ page }}</a>
+  </li>
+  <li class="page-item next mt-2" (click)="goNextPage()">
+    <a class="page-link">Következő</a>
+  </li>
+</ul>
