--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,10 @@
+<div class="col-4 offset-4 my-5 search-bar">
+  <input type="text" class="form-control" placeholder="Keresés a film címekben" (keyup)="onChangePhrase($event)">
+</div>
 <div class="card-container mt-5 d-flex flex-wrap justify-content-around col-10 offset-1">
-  <app-film-card [film]="film"
-    *ngFor="let film of filmList | slice:paginationInfo.startHits:paginationInfo.endHits"></app-film-card>
-  </div>
-  <div *ngIf="(list$ | async)?.length" class="container">
-    <app-pagination [paginationInfo]="paginationInfo" (hitsInterval)="setHitsInterval($event)"></app-pagination>
-  </div>
+  <app-film-card [film]="film" *ngFor="let film of list$ | async | filter:phrase | slice:paginationInfo.startHits:paginationInfo.endHits">
+  </app-film-card>
+</div>
+<div *ngIf="(list$ | async)?.length" class="container">
+  <app-pagination [paginationInfo]="paginationInfo" (hitsInterval)="setHitsInterval($event)"></app-pagination>
+</div>
