Improved advanced filter

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-5">
   <div class="col-8 offset-2">
     <a class="btn bg-dark text-white btn-block btn-sm" data-toggle="collapse" href="#search-section" role="button"
-      aria-expanded="false" aria-controls="collapseExample">
+      aria-expanded="false" aria-controls="collapseExample" id="advanced-filter-btn">
       Szűrési feltételek
     </a>
   </div>
