--- a/src/app/widget/pagination/pagination.component.html
+++ b/src/app/widget/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<ul class="pagination justify-content-center flex-wrap my-5">
+<ul class="pagination justify-content-center flex-wrap mb-5">
   <li class="page-item previous disabled mb-2" (click)="this.paginator.goPreviousPage($event)">
     <a class="page-link" aria-disabled="true">Előző</a>
   </li>
