--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
-    <a class="text-center text-primary" data-toggle="collapse" href="#search-section" role="button"
-      aria-expanded="false" aria-controls="collapseExample" id="advanced-filter-btn">
+    <a class="text-center text-dark" data-toggle="collapse" href="#search-section" role="button" aria-expanded="false"
+      aria-controls="collapseExample" id="advanced-filter-btn">
       Szűrési feltételek lenyitása/becsukása
     </a>
   </div>
@@ -10,17 +10,17 @@
   <div class="row">
     <div class="col-8 offset-2 mb-3">
       <label for="film-title"><b>Tartalmazza a film címe:</b></label>
-      <input id="film-title" type="text" class="form-control form-control-sm">
+      <input id="film-title" type="text" class="form-control form-control-sm" (keydown.enter)="onClickFilter()">
     </div>
   </div>
   <div class="row mb-3">
     <div class="col-4 offset-2">
       <label for="film-year-from"><b>Évszám (-tól):</b></label>
-      <input id="film-year-from" type="number" class="form-control form-control-sm">
+      <input id="film-year-from" type="number" class="form-control form-control-sm" (keydown.enter)="onClickFilter()">
     </div>
     <div class="col-4">
       <label for="film-year-to"><b>Évszám (-ig):</b></label>
-      <input id="film-year-to" type="number" class="form-control form-control-sm">
+      <input id="film-year-to" type="number" class="form-control form-control-sm" (keydown.enter)="onClickFilter()">
     </div>
   </div>
   <div class="row">
@@ -41,13 +41,15 @@
   <div class="row">
     <div class="col-8 offset-2 mb-3">
       <label for="film-genres"><b>Stílus(ok):</b></label>
-      <input id="film-genres" type="text" class="form-control form-control-sm" title="Vesszővel elválasztva ÉS kapcsolattal">
+      <input id="film-genres" type="text" class="form-control form-control-sm"
+        title="Vesszővel elválasztva ÉS kapcsolattal" (keydown.enter)="onClickFilter()">
     </div>
   </div>
   <div class="row">
     <div class="col-8 offset-2 mb-3">
       <label for="film-keywords"><b>Kulcsszavak:</b></label>
-      <input id="film-keywords" type="text" class="form-control form-control-sm" title="Vesszővel elválasztva VAGY kapcsolattal">
+      <input id="film-keywords" type="text" class="form-control form-control-sm"
+        title="Vesszővel elválasztva VAGY kapcsolattal" (keydown.enter)="onClickFilter()">
     </div>
   </div>
   <div class="row">
@@ -65,4 +67,8 @@
 </div>
 <div *ngIf="(list$ | async)?.length" class="container">
   <app-pagination></app-pagination>
+</div>
+<div *ngIf="!(list$ | async)?.length" class="text-center loading-box">
+  <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status"></div>
+  <div class="mt-3">Betöltés...</div>
 </div>
