--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
+    <div class="hits-counter text-center"><b>{{ paginator.listLength }} találat</b></div>
     <a class="text-center text-dark" data-toggle="collapse" href="#search-section" role="button" aria-expanded="false"
       aria-controls="collapseExample" id="advanced-filter-btn">
-      Szűrési feltételek lenyitása/becsukása
-    </a>
+      Szűrési feltételek lenyitása/becsukása</a>
   </div>
 </div>
 <div class="search-section mt-3 collapse" id="search-section">
