--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
-    <div class="hits-counter text-center"><b>{{ paginator.listLength }} találat</b></div>
+    <div class="hits-counter text-center mt-4 mb-3"><b>{{ paginator.listLength }} találat</b></div>
     <a class="text-center text-dark" data-toggle="collapse" href="#search-section" role="button" aria-expanded="false"
       aria-controls="collapseExample" id="advanced-filter-btn">
       Szűrési feltételek lenyitása/becsukása</a>
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-8 offset-2">
+    <div class="col-8 offset-2 mb-3">
       <button class="btn btn-primary btn-block btn-sm" (click)="onClickFilter()">
         <i class="fa fa-filter"></i> Szűrés
       </button>
