Database updated, cards with h-100

--- a/src/app/widget/film-card/film-card.component.html
+++ b/src/app/widget/film-card/film-card.component.html
@@ -1,25 +1,42 @@
-<div class="card mb-3" style="width: 17rem;">
+<div class="card mb-3 h-100" style="width: 17rem">
   <a href="{{ film.url }}" target="_blank">
-    <img src="{{ film.poster }}" class="card-img-top" alt="{{ film.name }} poszter">
+    <img
+      src="{{ film.poster }}"
+      class="card-img-top"
+      alt="{{ film.name }} poszter"
+    />
   </a>
   <div class="card-body">
-    <h5 class="card-title">{{ film.name }}
+    <h5 class="card-title">
+      {{ film.name }}
       <span *ngIf="film.year !== 0">({{ film.year }})</span>
     </h5>
-    <span class="film-stars" [tooltip]="tooltipText" [hide-delay]="0" placement="right">
+    <span
+      class="film-stars"
+      [tooltip]="tooltipText"
+      [hide-delay]="0"
+      placement="right"
+    >
       <i class="fa fa-thumbs-down stars-0" *ngIf="starsArray.length === 0"></i>
       <span *ngFor="let stars of starsArray">
-        <i class="fa fa-star" [class.stars-1]="starsArray.length === 1" [class.stars-2]="starsArray.length === 2"
-          [class.stars-3]="starsArray.length === 3" [class.stars-4]="starsArray.length === 4"
-          [class.stars-5]="starsArray.length === 5"></i>
+        <i
+          class="fa fa-star"
+          [class.stars-1]="starsArray.length === 1"
+          [class.stars-2]="starsArray.length === 2"
+          [class.stars-3]="starsArray.length === 3"
+          [class.stars-4]="starsArray.length === 4"
+          [class.stars-5]="starsArray.length === 5"
+        ></i>
       </span>
     </span>
     <div class="genres mt-2">
       <span>{{ genres }}</span>
     </div>
     <div class="keywords mt-2" *ngIf="keywords">
-      <hr>
-      <span><b>Kulcsszavak: </b><small>{{ keywords }}</small></span>
+      <hr />
+      <span
+        ><b>Kulcsszavak: </b><small>{{ keywords }}</small></span
+      >
     </div>
   </div>
 </div>
