--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,32 +1,59 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
-    <div class="hits-counter text-center mt-4 mb-3"><b>{{ paginator.listLength }} találat</b></div>
-    <a class="text-center text-dark" data-toggle="collapse" href="#search-section" role="button" aria-expanded="false"
-      aria-controls="collapseExample" id="advanced-filter-btn">
-      Szűrési feltételek lenyitása/becsukása</a>
+    <div class="hits-counter text-center mt-4 mb-3">
+      <b>{{ paginator.listLength }} találat</b>
+    </div>
+    <a
+      class="text-center text-dark"
+      data-toggle="collapse"
+      href="#search-section"
+      role="button"
+      aria-expanded="false"
+      aria-controls="collapseExample"
+      id="advanced-filter-btn"
+    >
+      Szűrési feltételek lenyitása/becsukása</a
+    >
   </div>
 </div>
 
 <div class="row">
-  <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 mt-4 search-section collapse" id="search-section">
+  <div
+    class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 mt-4 search-section collapse"
+    id="search-section"
+  >
     <div class="card text-dark bg-light border-light shadow rounded">
       <div class="card-body">
-
         <div>
           <div class="row">
             <div class="col-12 mb-3">
               <label for="film-title"><b>Tartalmazza a film címe:</b></label>
-              <input id="film-title" type="text" class="form-control form-control-sm" (keydown.enter)="onClickFilter()">
+              <input
+                id="film-title"
+                type="text"
+                class="form-control form-control-sm"
+                (keydown.enter)="onClickFilter()"
+              />
             </div>
           </div>
           <div class="row mb-3">
             <div class="col-6">
               <label for="film-year-from"><b>Évszám (-tól):</b></label>
-              <input id="film-year-from" type="number" class="form-control form-control-sm" (keydown.enter)="onClickFilter()">
+              <input
+                id="film-year-from"
+                type="number"
+                class="form-control form-control-sm"
+                (keydown.enter)="onClickFilter()"
+              />
             </div>
             <div class="col-6">
               <label for="film-year-to"><b>Évszám (-ig):</b></label>
-              <input id="film-year-to" type="number" class="form-control form-control-sm" (keydown.enter)="onClickFilter()">
+              <input
+                id="film-year-to"
+                type="number"
+                class="form-control form-control-sm"
+                (keydown.enter)="onClickFilter()"
+              />
             </div>
           </div>
           <div class="row">
@@ -47,47 +74,85 @@
           <div class="row">
             <div class="col-12 mb-3">
               <label for="film-genres"><b>Stílus(ok):</b></label>
-              <input id="film-genres" type="text" class="form-control form-control-sm"
-                title="Vesszővel elválasztva ÉS kapcsolattal" (keydown.enter)="onClickFilter()">
+              <input
+                id="film-genres"
+                type="text"
+                class="form-control form-control-sm"
+                title="Vesszővel elválasztva ÉS kapcsolattal"
+                (keydown.enter)="onClickFilter()"
+              />
             </div>
           </div>
 
           <div class="row">
             <div class="col-12 mb-3">
-              <label for="film-excluded-genres"><b>Kizárt stílus(ok):</b></label>
-              <input id="film-excluded-genres" type="text" class="form-control form-control-sm"
-                title="Vesszővel elválasztva VAGY kapcsolattal" (keydown.enter)="onClickFilter()">
+              <label for="film-excluded-genres"
+                ><b>Kizárt stílus(ok):</b></label
+              >
+              <input
+                id="film-excluded-genres"
+                type="text"
+                class="form-control form-control-sm"
+                title="Vesszővel elválasztva VAGY kapcsolattal"
+                (keydown.enter)="onClickFilter()"
+              />
             </div>
           </div>
 
           <div class="row">
             <div class="col-12 mb-3">
               <label for="film-keywords"><b>Kulcsszavak:</b></label>
-              <input id="film-keywords" type="text" class="form-control form-control-sm"
-                title="Vesszővel elválasztva VAGY kapcsolattal" (keydown.enter)="onClickFilter()">
+              <input
+                id="film-keywords"
+                type="text"
+                class="form-control form-control-sm"
+                title="Vesszővel elválasztva VAGY kapcsolattal"
+                (keydown.enter)="onClickFilter()"
+              />
             </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-              <button class="btn btn-primary" (click)="onClickFilter()"><i class="fa fa-filter"></i> Szűrés</button>
+              <button class="btn btn-primary" (click)="onClickFilter()">
+                <i class="fa fa-filter"></i> Szűrés
+              </button>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
 </div>
 
-<div class="card-container mt-4 d-flex flex-wrap justify-content-around col-10 offset-1">
-  <app-film-card [film]="film"
-    *ngFor="let film of list$ | async | filter:filterInfo.filmTitle:filterInfo.filmYearFrom:filterInfo.filmYearTo:filterInfo.stars:filterInfo.filmGenres:filterInfo.filmExcludedGenres:filterInfo.keywords | slice:paginator.startHits:paginator.endHits">
+<div
+  class="card-container mt-4 d-flex flex-wrap justify-content-around col-10 offset-1"
+>
+  <app-film-card
+    [film]="film"
+    *ngFor="
+      let film of list$
+        | async
+        | filter
+          : filterInfo.filmTitle
+          : filterInfo.filmYearFrom
+          : filterInfo.filmYearTo
+          : filterInfo.stars
+          : filterInfo.filmGenres
+          : filterInfo.filmExcludedGenres
+          : filterInfo.keywords
+        | slice : paginator.startHits : paginator.endHits
+    "
+  >
   </app-film-card>
 </div>
 <div *ngIf="(list$ | async)?.length" class="container">
   <app-pagination></app-pagination>
 </div>
 <div *ngIf="!(list$ | async)?.length" class="text-center loading-box">
-  <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status"></div>
+  <div
+    class="spinner-border"
+    style="width: 3rem; height: 3rem"
+    role="status"
+  ></div>
   <div class="mt-3">Betöltés...</div>
 </div>
