--- a/src/app/widget/film-card/film-card.component.html
+++ b/src/app/widget/film-card/film-card.component.html
@@ -1,10 +1,6 @@
 <div class="card mb-3 h-100" style="width: 17rem">
   <a href="{{ film.url }}" target="_blank">
-    <img
-      src="{{ film.poster }}"
-      class="card-img-top"
-      alt="{{ film.name }} poszter"
-    />
+    <img src="{{ film.poster }}" class="card-img-top" alt="{{ film.name }} poszter" />
   </a>
   <div class="card-body">
     <h5 class="card-title">
