Restore tooltip and fix some things

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -5,8 +5,8 @@
     </div>
     <a
       class="text-center text-dark"
-      data-toggle="collapse"
-      href="#search-section"
+      data-bs-toggle="collapse"
+      data-bs-target="#search-section"
       role="button"
       aria-expanded="false"
       aria-controls="collapseExample"
