--- a/src/app/widget/navbar/navbar.component.html
+++ b/src/app/widget/navbar/navbar.component.html
@@ -1,21 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Mafab értékelt film böngésző</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNav"
-    aria-controls="navbarNav"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Kezdőlap <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Mafab értékelt film böngésző</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Kezdőlap <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
