--- a/src/app/widget/film-card/film-card.component.html
+++ b/src/app/widget/film-card/film-card.component.html
@@ -7,7 +7,8 @@
       {{ film.name }}
       <span *ngIf="film.year !== 0">({{ film.year }})</span>
     </h5>
-    <span class="film-stars" [tooltip]="tooltipText" [hide-delay]="0" placement="right">
+    <!-- <span class="film-stars" [tooltip]="tooltipText" [hide-delay]="0" placement="right"> -->
+    <span class="film-stars" placement="right">
       <i class="fa fa-thumbs-down stars-0" *ngIf="starsArray.length === 0"></i>
       <span *ngFor="let stars of starsArray">
         <i
